# llsd-rs

./: Cargo.toml  DERIVE.md  README.md
.github/workflows/: rust.yml
crates/llsd-rs/: Cargo.toml  README.md
crates/llsd-rs-derive/: Cargo.toml  README.md
crates/llsd-rs-derive/src/: lib.rs
crates/llsd-rs/src/: autodetect.rs  binary.rs  derive.rs  lib.rs  notation.rs  rpc.rs  xml.rs
crates/llsd-rs/tests/: derive_basic.rs
examples/: derive_usage.rs
src/: binary.rs  lib.rs  notation.rs  rpc.rs  xml.rs
