[package]
name = "llsd-rs"
version = "0.1.2"
edition = "2024"
license = "LGPL-2.1"
authors = ["Sekkmer"]
readme = "README.md"
description = "A Rust library for parsing and serializing LLSD (Linden Lab Structured Data) format."
repository = "https://github.com/Sekkmer/llsd-rs"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
binrw = "0.15.0"
chrono = "0.4.41"
enum-as-inner = "0.6.1"
url = "2.5.4"
uuid = { version = "1.16.0" }
xml-rs = "0.8.26"
